syntax = "proto3";

package compileworker;

option go_package = "github.com/cga1123/slugcmplr/proto/compileworker";

service Compile {
  rpc TriggerForRepository(RepositoryInfo) returns (JobResponse);
  rpc TriggerForTarget(TargetInfo) returns (JobResponse);
}

message JobResponse {
  string jid = 1;
}

message RepositoryInfo {
  string event_id = 1;
  string commit_sha = 2;
  string owner = 4;
  string repository = 5;
  string ref = 6;
}

message TargetInfo {
  string delivery_id = 1;
  string target = 2;

  string commit_sha = 3;
  string owner = 4;
  string repository = 5;
}
